@@ -4,25 +4,61 @@
 	"variantgroups": [
 		{ "code": "source", "states": ["chicken", "pheasant", "goldenpheasant", "capercaillie", "wildturkey"] }
 	],
-	"texture": { "base": "item/food/limeegg" },
+    "behaviorsByType": {
+      "*": [
+        {
+          "name": "EggCrack",
+          "properties": {
+            "fullLiquidCode": "aculinaryartillery:eggyolkfullportion-{source}",
+            "eggYolkCode": "aculinaryartillery:eggyolk-{source}"
+          }
+        },
+        {
+          "name": "GroundStorable",
+          "properties": {
+            "layout": "Quadrants",
+            "collisionBox": { "x1": 0, "y1": 0, "z1": 0, "x2": 1, "y2": 0.125, "z2": 1 }
+          }
+        }
+      ]
+    },
+    "shape": { "base": "game:item/food/egg" },
+    "texturesByType": {
+        "*-chicken": { "hay-egg": { "base": "item/food/limeegg" }},
+        "*-pheasant": { "hay-egg": { "base": "item/food/limeegg", "blendedOverlays": [ { "base": "moreanimals:item/egg/pheasant-color", "blendMode": "Overlay" } ] }},
+        "*-goldenpheasant": { "hay-egg": { "base": "item/food/limeegg", "blendedOverlays": [ { "base": "moreanimals:item/egg/goldenpheasant-color", "blendMode": "Overlay" } ] }},
+        "*-capercaillie": { "hay-egg": { "base": "item/food/limeegg", "blendedOverlays": [ { "base": "moreanimals:item/egg/capercaillie-speckles", "blendMode": "Normal" } ] }},
+        "*-wildturkey": { "hay-egg": { "base": "item/food/limeegg", "blendedOverlays": [ { "base": "moreanimals:item/egg/turkey-speckles", "blendMode": "Normal" } ] }}
+    },
 	"creativeinventory": { "general": ["*"], "items": ["*"], "expandedfoods": ["*"] },
 	"attributes": {
 		"nutritionPropsWhenInMealByType": {
-			"@*-(pheasant|goldenpheasant|capercaillie|wildturkey)": {
-				"saturation": 280,
-				"foodcategory": "Protein"
-			},
-			"*-chicken": {
-				"saturation": 200,
-				"foodcategory": "Protein"
-			}
+			"@*-(pheasant|goldenpheasant|capercaillie|wildturkey)": { "saturation": 280, "foodcategory": "Protein" },
+			"*-chicken": { "saturation": 200, "foodcategory": "Protein" }
 		},
-		"inPieProperties": {
-			"texture": "game:block/food/pie/fill-egg",
-			"partType": "Filling"
-		}
+		"inPieProperties": { "texture": "game:block/food/pie/fill-egg", "partType": "Filling" }
 	},
 	"materialDensity": 200,
+    "guiTransform": {
+      "translation": { "x": 0, "y": 0, "z": 0 },
+      "rotation": { "x": -30, "y": -20, "z": 0 },
+      "origin": { "x": 0.49, "y": 0.02, "z": 0.5 },
+      "scale": 5.95
+    },
+    "tpHandTransform": {
+      "translation": { "x": -0.8, "y": -0.25, "z": -0.6 },
+      "scale": 0.71
+    },
+    "fpHandTransform": {
+      "translation": { "x": 0, "y": -0.1, "z": 0 },
+      "rotation": { "x": 180, "y": 90, "z": 22 }
+    },
+    "groundTransform": {
+      "translation": { "x": 0, "y": 0, "z": 0 },
+      "rotation": { "x": 0, "y": 0, "z": 0 },
+      "origin": { "x": 0.5, "y": 0, "z": 0.5 },
+      "scale": 5
+    },
 	"transitionableProps": [{
 		"type": "Perish",
 		"freshHours": { "avg": 168 },
