@@ -83,7 +83,8 @@ CHECK https://github.com/AreYSerious/VintageTranslation FOR TRANSLATIONS....
 - Bowl recipes updated (names and remapping later) - DONE!!!
 - Scrambled egg recipe fixed -DONE!!!
 - Scrambled egg shape updated & textures updated for all liquid egg variants - DONE!!!
-- Water-glassed and pickled eggs updated
+- All egg visuals updated; new boiled egg texture - DONE!!!
+- Water-glassed eggs can be cracked now - DONE!!!
 - More Animals compatibility updated, while we're doing all this egg stuff
 
 1.7.5
